<resources>
	<string name="app_name">My Application</string>
	<string name="hello_world_again">Hello World Again :)</string>
	<string name="button1">Button1</string>
	<string name="button2">Button2</string>
	<string name="button3">Go to Second</string>
	<string name="but1text">Button 1 was clicked</string>
	<string name="but2text">Button 2 was clicked</string>
	<string name="but3text">Button 3 was clicked</string>
	<string name="go_back">Go back</string>
	<string name="this_is_the_secondary_layout">This is the secondary layout</string>
	<string name="home">Home</string>
	<string name="second_layout">Second Layout</string>
	<string name="exit">Exit</string>
	<string name="count_up">Count Up</string>
	<string name="_0">0</string>
	<string name="input">Input</string>
	<string name="number_1">Number 1</string>
	<string name="number_2">Number 2</string>
	<string name="textview">TextView</string>
	<string name="plus">+</string>
	<string name="minus">-</string>
	<string name="multiply">*</string>
	<string name="divide">/</string>
	<string name="please_write_only_whole_numbers">Please Write only whole numbers</string>
	<string name="sensortest">SensorTest</string>
	<string name="autocompletetextview">AutoCompleteTextView</string>
	<string name="mainact2">MainAct2</string>
</resources>