<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

	<Button
		android:id="@+id/btn_1_2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="416dp"
		android:onClick="GoToMainLayout"
		android:text="@string/go_back"
		android:textSize="30sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/txt1_2" />

	<TextView
		android:id="@+id/txt1_2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/this_is_the_secondary_layout"
		android:textSize="30sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.123" />

	<Button
		android:id="@+id/btn_2_2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="152dp"
		android:onClick="onClick"
		android:text="@string/count_up"
		android:textSize="20sp"
		app:layout_constraintBottom_toTopOf="@+id/btn_1_2"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

	<TextView
		android:id="@+id/txtCount"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="116dp"
		android:text="@string/_0"
		android:textSize="40sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.498"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/txt1_2" />
</androidx.constraintlayout.widget.ConstraintLayout>