<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android = "http://schemas.android.com/apk/res/android"
                                                   xmlns:app = "http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools = "http://schemas.android.com/tools"
                                                   android:layout_width = "match_parent"
                                                   android:layout_height = "match_parent"
                                                   tools:context = ".CalculatorActivity">

	<EditText
		android:id = "@+id/number1"
		android:layout_width = "274dp"
		android:layout_height = "56dp"
		android:layout_marginStart = "66dp"
		android:layout_marginTop = "120dp"
		android:layout_marginEnd = "71dp"
		android:autofillHints = ""
		android:ems = "10"
		android:hint = "@string/number_1"
		android:inputType = "number"
		app:layout_constraintEnd_toEndOf = "parent"
		app:layout_constraintHorizontal_bias = "0.0"
		app:layout_constraintStart_toStartOf = "parent"
		app:layout_constraintTop_toTopOf = "parent"
		tools:ignore = "LabelFor"/>

	<Button
		android:id = "@+id/button"
		android:layout_width = "wrap_content"
		android:layout_height = "wrap_content"
		android:layout_marginStart = "94dp"
		android:layout_marginTop = "42dp"
		android:layout_marginEnd = "78dp"
		android:onClick = "onClick"
		android:text = "@string/plus"
		app:layout_constraintEnd_toStartOf = "@+id/button2"
		app:layout_constraintStart_toStartOf = "parent"
		app:layout_constraintTop_toBottomOf = "@+id/result"/>

	<Button
		android:id = "@+id/button2"
		android:layout_width = "wrap_content"
		android:layout_height = "wrap_content"
		android:layout_marginStart = "79dp"
		android:layout_marginTop = "130dp"
		android:layout_marginEnd = "63dp"
		android:onClick = "onClick"
		android:text = "@string/minus"
		app:layout_constraintEnd_toEndOf = "parent"
		app:layout_constraintStart_toEndOf = "@+id/button"
		app:layout_constraintTop_toBottomOf = "@+id/number2"/>

	<Button
		android:id = "@+id/button4"
		android:layout_width = "wrap_content"
		android:layout_height = "wrap_content"
		android:layout_marginStart = "78dp"
		android:layout_marginTop = "48dp"
		android:layout_marginEnd = "63dp"
		android:onClick = "onClick"
		android:text = "@string/divide"
		app:layout_constraintEnd_toEndOf = "parent"
		app:layout_constraintStart_toEndOf = "@+id/button3"
		app:layout_constraintTop_toBottomOf = "@+id/button2"/>

	<EditText
		android:id = "@+id/number2"
		android:layout_width = "270dp"
		android:layout_height = "61dp"
		android:layout_marginStart = "66dp"
		android:layout_marginTop = "49dp"
		android:layout_marginEnd = "75dp"
		android:autofillHints = ""
		android:ems = "10"
		android:hint = "@string/number_2"
		android:inputType = "number"
		app:layout_constraintEnd_toEndOf = "parent"
		app:layout_constraintStart_toStartOf = "parent"
		app:layout_constraintTop_toBottomOf = "@+id/number1"
		tools:ignore = "LabelFor"/>

	<TextView
		android:id = "@+id/result"
		android:layout_width = "wrap_content"
		android:layout_height = "wrap_content"
		android:layout_marginStart = "138dp"
		android:layout_marginTop = "48dp"
		android:layout_marginEnd = "151dp"
		android:textSize = "30sp"
		app:layout_constraintEnd_toEndOf = "parent"
		app:layout_constraintStart_toStartOf = "parent"
		app:layout_constraintTop_toBottomOf = "@+id/number2"/>

	<Button
		android:id = "@+id/button3"
		android:layout_width = "wrap_content"
		android:layout_height = "wrap_content"
		android:layout_marginStart = "94dp"
		android:layout_marginTop = "48dp"
		android:layout_marginEnd = "78dp"
		android:onClick = "onClick"
		android:text = "@string/multiply"
		app:layout_constraintEnd_toStartOf = "@+id/button4"
		app:layout_constraintStart_toStartOf = "parent"
		app:layout_constraintTop_toBottomOf = "@+id/button"/>
</androidx.constraintlayout.widget.ConstraintLayout>