<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android = "http://schemas.android.com/apk/res/android"
                                                   xmlns:app = "http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools = "http://schemas.android.com/tools"
                                                   android:layout_width = "match_parent"
                                                   android:layout_height = "match_parent"
                                                   tools:context = ".MainActivity">

	<TextView
		android:id = "@+id/txt1"
		android:layout_width = "wrap_content"
		android:layout_height = "wrap_content"
		android:layout_marginStart = "25dp"
		android:layout_marginTop = "64dp"
		android:layout_marginEnd = "26dp"
		android:text = "@string/hello_world_again"
		android:textColor = "#07688C"
		android:textSize = "30sp"
		app:layout_constraintEnd_toEndOf = "parent"
		app:layout_constraintHorizontal_bias = "0.505"
		app:layout_constraintStart_toStartOf = "parent"
		app:layout_constraintTop_toTopOf = "parent"/>

	<Button
		android:id = "@+id/btn_1"
		android:layout_width = "240dp"
		android:layout_height = "60dp"
		android:layout_marginStart = "85dp"
		android:layout_marginTop = "100dp"
		android:layout_marginEnd = "86dp"
		android:backgroundTint = "#389D3C"
		android:text = "@string/button1"
		android:textColor = "#233A35"
		android:textSize = "30sp"
		app:layout_constraintEnd_toEndOf = "parent"
		app:layout_constraintHorizontal_bias = "1.0"
		app:layout_constraintStart_toStartOf = "parent"
		app:layout_constraintTop_toBottomOf = "@+id/txt1"/>

	<Button
		android:id = "@+id/btn_2"
		android:layout_width = "240dp"
		android:layout_height = "60dp"
		android:layout_marginTop = "100dp"
		android:backgroundTint = "#4871C9"
		android:text = "@string/button2"
		android:textColor = "#233A35"
		android:textSize = "30sp"
		app:layout_constraintEnd_toEndOf = "parent"
		app:layout_constraintHorizontal_bias = "0.502"
		app:layout_constraintStart_toStartOf = "parent"
		app:layout_constraintTop_toBottomOf = "@+id/btn_1"/>

	<Button
		android:id = "@+id/btn_3"
		android:layout_width = "240dp"
		android:layout_height = "60dp"
		android:layout_marginTop = "100dp"
		android:backgroundTint = "#7E467B"
		android:text = "@string/button3"
		android:textColor = "#233A35"
		android:textSize = "30sp"
		app:layout_constraintEnd_toEndOf = "parent"
		app:layout_constraintHorizontal_bias = "0.502"
		app:layout_constraintStart_toStartOf = "parent"
		app:layout_constraintTop_toBottomOf = "@+id/btn_2"/>
</androidx.constraintlayout.widget.ConstraintLayout>